tests/baselines/reference/objectLiteralsAgainstUnionsOfArrays01.errors.txt
tests/cases/compiler/objectLiteralsAgainstUnionsOfArrays01.ts(9,5): error TS2322: Type '{ bar: { prop: number; }; }[]' is not assignable to type 'Foo[]'.
  Type '{ bar: { prop: number; }; }' is not assignable to type 'Foo'.
    Types of property 'bar' are incompatible.
      Type '{ prop: number; }' is not assignable to type 'Bar | Bar[]'.
        Type '{ prop: number; }' is not assignable to type 'Bar'.
          Types of property 'prop' are incompatible.
            Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/objectLiteralsAgainstUnionsOfArrays01.ts (1 errors) ====
    interface Foo {
      bar: Bar | Bar[];
    }
    
    interface Bar {
      prop: string;
    }
    
    let x: Foo[] = [
        ~
!!! error TS2322: Type '{ bar: { prop: number; }; }[]' is not assignable to type 'Foo[]'.
!!! error TS2322:   Type '{ bar: { prop: number; }; }' is not assignable to type 'Foo'.
!!! error TS2322:     Types of property 'bar' are incompatible.
!!! error TS2322:       Type '{ prop: number; }' is not assignable to type 'Bar | Bar[]'.
!!! error TS2322:         Type '{ prop: number; }' is not assignable to type 'Bar'.
!!! error TS2322:           Types of property 'prop' are incompatible.
!!! error TS2322:             Type 'number' is not assignable to type 'string'.
      { bar: { prop: 100 } }
    ]
    